tests/pos/lit.hs
module Lit where

{-@ test :: {v:Int | v == 3} @-}
test = length "cat"
